--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:v7kbBWpadivUjL5Y78hWz2fQPsH0iuszV1mlTKL6/+A=
 APP_DEBUG=true
-APP_TIMEZONE=UTC
+APP_TIMEZONE='Asia/Bangkok'
 APP_URL=http://localhost
 
 APP_LOCALE=en
